<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_use">Пользовательское соглашение</string>
    <string name="link_share">https://practicum.yandex.ru/android-developer/</string>
    <string name="message_share">Поделиться с помощью</string>
    <string name="mail_support">wastoyou@mail.ru</string>
    <string name="subject_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_terms_use">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="upload_failed">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="null_time">00:00</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_favorite_tracks">Ваша медиатека пуста</string>
    <string name="none_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="button_to_create">Создать</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>