<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <TextView
        style="@style/TopMessageTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:gravity="center"
        android:text="@string/settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitcher"
        style="@style/ColorSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingEnd="@dimen/padding_8dp"
        android:text="@string/night_theme"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="400"
        android:textSize="@dimen/medium_text_size" />

    <TextView
        android:id="@+id/share"
        style="@style/MessageTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16dp"
        android:text="@string/share"
        app:drawableRightCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/support"
        style="@style/MessageTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16dp"
        android:text="@string/support"
        app:drawableRightCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/termsUse"
        style="@style/MessageTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16dp"
        android:text="@string/terms_use"
        app:drawableRightCompat="@drawable/ic_arrow_forward" />

</LinearLayout>