<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_8dp">

        <ImageView
            android:id="@+id/arrowLeftSearch"
            style="@style/ArrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_8dp" />

        <TextView
            style="@style/TopMessageTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_16dp"
            android:gravity="center"
            android:text="@string/search" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginVertical="@dimen/margin_8dp">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/ic_small_search"
            android:drawablePadding="@dimen/padding_8dp"
            android:drawableTint="?attr/colorSecondary"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/padding_12dp"
            android:paddingVertical="@dimen/padding_8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorSecondary"
            android:textCursorDrawable="@drawable/blue_cursor"
            android:textFontWeight="400"
            android:textSize="@dimen/medium_text_size"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginHorizontal="@dimen/margin_12dp"
            android:src="@drawable/ic_small_close"
            android:visibility="gone"
            app:tint="?attr/colorSecondary" />

    </FrameLayout>

    <TextView
        android:id="@+id/placeholderNothingFound"
        style="@style/PlaceholderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_102dp"
        android:drawablePadding="@dimen/padding_16dp"
        android:text="@string/nothing_found"
        android:textAlignment="center"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_nothing_found" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/placeholderUploadFailed"
            style="@style/PlaceholderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_102dp"
            android:drawablePadding="@dimen/padding_16dp"
            android:text="@string/upload_failed"
            android:textAlignment="center"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_upload_failed" />

        <TextView
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_24dp"
            android:background="@drawable/button_corners"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/update"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_14sp"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listTracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_view" />

</LinearLayout>